--- a/kubecost/front/Dockerfile
+++ b/kubecost/front/Dockerfile
@@ -1,4 +1,4 @@
-FROM  gcr.io/kubecost1/front:prod-1.88.1
+FROM  gcr.io/kubecost1/frontend:prod-1.88.1
 
 
 LABEL Description="This is an extend image base from kubecost1"
